[gd_scene load_steps=7 format=3 uid="uid://b3grigpxgh5e2"]

[ext_resource type="Script" path="res://phys_demo.gd" id="1_88pvf"]
[ext_resource type="PackedScene" uid="uid://dfuu8kajkm5cx" path="res://phys_ball.tscn" id="1_t5m1y"]
[ext_resource type="Theme" uid="uid://b0cs0qqc6nrp7" path="res://Big_font.tres" id="2_si5wb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsxgx"]
size = Vector2(1156, 104)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_faqkm"]

[sub_resource type="Theme" id="Theme_7rk7l"]
default_font_size = 36

[node name="phys_demo" type="Node2D"]
script = ExtResource("1_88pvf")

[node name="phys_ball" parent="." instance=ExtResource("1_t5m1y")]
position = Vector2(910, 162)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(575, 594)
shape = SubResource("RectangleShape2D_qsxgx")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(577, 593)
scale = Vector2(1154.5, 102)
texture = SubResource("PlaceholderTexture2D_faqkm")

[node name="Sprite2D2" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(577, 593)
scale = Vector2(1154.5, 102)
texture = SubResource("PlaceholderTexture2D_faqkm")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(575, 594)
shape = SubResource("RectangleShape2D_qsxgx")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(577, 593)
scale = Vector2(1154.5, 102)
texture = SubResource("PlaceholderTexture2D_faqkm")

[node name="Sprite2D2" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(577, 593)
scale = Vector2(1154.5, 102)
texture = SubResource("PlaceholderTexture2D_faqkm")

[node name="Panel" type="Panel" parent="."]
offset_right = 570.0
offset_bottom = 408.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 254.0
offset_bottom = 84.0
theme = SubResource("Theme_7rk7l")
text = "Gravity:"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 117.0
offset_right = 267.0
offset_bottom = 173.0
theme = SubResource("Theme_7rk7l")
text = "Inertia:"

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 227.0
offset_right = 270.0
offset_bottom = 283.0
theme = SubResource("Theme_7rk7l")
text = "Mass:"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 167.0
offset_right = 267.0
offset_bottom = 221.0
theme = SubResource("Theme_7rk7l")
text = "Velocity (x, y):"

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 288.0
offset_right = 256.0
offset_bottom = 342.0
theme = SubResource("Theme_7rk7l")
text = "Cross product:"

[node name="gravslider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 197.0
offset_top = 6.0
offset_right = 563.0
offset_bottom = 56.0
min_value = -1.0

[node name="ApFo" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 45.0
offset_right = 466.0
offset_bottom = 103.0
theme = ExtResource("2_si5wb")
text = "Apply force"

[node name="ApAd" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 79.0
offset_top = 342.0
offset_right = 487.0
offset_bottom = 400.0
theme = ExtResource("2_si5wb")
text = "Apply Adjustments"

[node name="Inertia" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 221.0
offset_top = 125.0
offset_right = 568.0
offset_bottom = 167.0

[node name="mass" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 136.0
offset_top = 237.0
offset_right = 572.0
offset_bottom = 279.0

[node name="Xchange" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 248.0
offset_top = 175.0
offset_right = 395.0
offset_bottom = 217.0

[node name="Xchange2" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 261.0
offset_top = 296.0
offset_right = 408.0
offset_bottom = 338.0

[node name="Ychange" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 415.0
offset_top = 173.0
offset_right = 562.0
offset_bottom = 215.0

[node name="Ychange2" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 417.0
offset_top = 292.0
offset_right = 564.0
offset_bottom = 334.0

[connection signal="value_changed" from="Panel/gravslider" to="." method="_on_gravslider_value_changed"]
[connection signal="pressed" from="Panel/ApFo" to="." method="_on_ap_fo_pressed"]
[connection signal="pressed" from="Panel/ApAd" to="." method="_on_ap_ad_pressed"]
